trying to solve share btn problem change the share-btn id to anything in index.html to display the btn

--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ span {
 .resumeBtn{
   
   display: flex;
-  justify-content: center;  /* Horizontally centers the buttons */
+  justify-content: center; 
   align-items: center;
   gap: 10px;
 }
